-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
c4511ae7df2eb6090931c5da6dd7476ec93d8d54 (qt/qtquick3d/dev) 0bce82176b4894b14b2c7e3dbc66620f1100d1cd (qt/qtquick3d/6.2)
Suzanne mesh is not loaded when using it with model-blend particles.
| For Gerrit Dashboard: QTBUG-94479 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 354082,3 | Fix RuntimeMeshData max attribute count | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 354294,2 | Fix RuntimeMeshData max attribute count | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |