Fix RuntimeMeshData max attribute count

The maximum attribute count in geometry is 16, but 8 in RuntimeMeshData.
Add missing semantics to semanticFromName function.

Fixes: QTBUG-94479
Pick-to: 6.2
Change-Id: I2357b53e97a826d35e53bd311b0b7ca9cff3afdf
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>